--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -1,1 +1,38 @@
 @import "bootstrap";
+
+.booyah-box {
+  -moz-box-shadow: 1px 1px 2px 0 #d0d0d0;
+  -webkit-box-shadow: 1px 1px 2px 0 #d0d0d0;
+  box-shadow: 1px 1px 2px 0 #d0d0d0;
+  background: #fff;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  padding: 20px 30px;
+}
+
+.help-block {
+    color: #ff3333;
+    background-color: #FFEEEE;
+    border-radius: 3px;
+    padding: 2px 8px 2px 8px;
+}
+
+
+
+
+
+#user-font{
+  font-weight: 600;
+  border-bottom: 3px solid black; 
+  margin-left: 30%;
+  margin-right: 30%;
+  padding-top: 20px;
+}
+
+#user_remember_me.boolean.optional {
+  margin-right: 10px;
+}
+ 
