--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -3,22 +3,24 @@
   <div class = "row">
     <div class = "col-12 col-md-6 offset-md-3">
       <h1>All unmatched games</h1>
-      <% @unmatched_games.each do |game| %>
-        <h5>Game with <%= game.users.first.email %></h5>
-        <% if game.white_player_user_id.blank? %>
-          <%= simple_form_for game, url: game_path(game) do |f| %>
-            <%= f.input :white_player_user_id, as: :hidden, :input_html => { :value => current_user.id } %>
-            <%= f.input :state, as: :hidden, :input_html => { :value => "Started" } %>
-            <%= f.submit "Join as white player", class: "btn btn-primary col-12" %>
+        <% if @game.any? %>
+          <% @unmatched_games.each do |game| %>
+            <h5>Game with <%= game.users.first.email %></h5>
+            <% if game.white_player_user_id.blank? %>
+              <%= simple_form_for game, url: game_path(game) do |f| %>
+                <%= f.input :white_player_user_id, as: :hidden, :input_html => { :value => current_user.id } %>
+                <%= f.submit "Join as white player", class: "btn btn-primary col-12" %>
+              <% end %>
+            <% else %>
+              <%= simple_form_for game, url: game_path(game) do |f| %>
+                <%= f.input :black_player_user_id, as: :hidden, :input_html => { :value => current_user.id } %>
+                <%= f.submit "Join as black player", class: "btn btn-primary col-12" %>
+              <% end %>
+            <% end %>
           <% end %>
-        <% else %>
-          <%= simple_form_for game, url: game_path(game) do |f| %>
-            <%= f.input :black_player_user_id, as: :hidden, :input_html => { :value => current_user.id } %>
-            <%= f.input :state, as: :hidden, :input_html => { :value => "Started" } %>
-            <%= f.submit "Join as black player", class: "btn btn-primary col-12" %>
-          <% end %>
-        <% end %>
-      <% end %>
+        <%else%>
+          <h3>No games started </h3>
+        <%end%>
     </div>
   </div>
   <div class = "row">
