--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -9,12 +9,12 @@
           <% @unmatched_games.each do |game| %>
             <h5>Game with <%= game.users.first.email %></h5>
             <% if game.white_player_user_id.blank? %>
-              <%= simple_form_for game, url: game_path(game) do |f| %>
+              <%= simple_form_for game, url: join_game_path(game) do |f| %>
                 <%= f.input :white_player_user_id, as: :hidden, :input_html => { :value => current_user.id } %>
                 <%= f.submit "Join as white player", class: "btn btn-primary col-12" %>
               <% end %>
             <% else %>
-              <%= simple_form_for game, url: game_path(game) do |f| %>
+              <%= simple_form_for game, url: join_game_path(game) do |f| %>
                 <%= f.input :black_player_user_id, as: :hidden, :input_html => { :value => current_user.id } %>
                 <%= f.submit "Join as black player", class: "btn btn-primary col-12" %>
               <% end %>
