--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -10,12 +10,16 @@
             <h5>Game with <%= game.users.first.email %></h5>
             <% if game.white_player_user_id.blank? %>
               <%= simple_form_for game, url: game_path(game) do |f| %>
-                <%= f.input :white_player_user_id, as: :hidden, :input_html => { :value => current_user.id } %>
+                <% if user_signed_in? %>
+                  <%= f.input :white_player_user_id, as: :hidden, :input_html => { :value => current_user.id } %>
+                <% end %>
                 <%= f.submit "Join as white player", class: "btn btn-primary col-12" %>
               <% end %>
             <% else %>
               <%= simple_form_for game, url: game_path(game) do |f| %>
-                <%= f.input :black_player_user_id, as: :hidden, :input_html => { :value => current_user.id } %>
+                <% if user_signed_in? %>
+                  <%= f.input :black_player_user_id, as: :hidden, :input_html => { :value => current_user.id } %>
+                <% end %>
                 <%= f.submit "Join as black player", class: "btn btn-primary col-12" %>
               <% end %>
             <% end %>
@@ -46,7 +50,7 @@
       <h1>Completed games</h1>
       <% if @completed_games.any? %>
         <% @completed_games.each do |game| %>
-          <h5><%= game.winner.email %> won in a game between <%= game.white_player.email %> and <% game.black_player.email %></h5>
+          <h5><%= game.winner.email %> won in a game between <%= game.white_player.email %> and <%= game.black_player.email %></h5>
         <% end %>
       <% else %>
         <h3>No completed games :(</h3>
