--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,1 +1,78 @@
-<h1>A beautiful summary of Team Awesome</h1>
+<div class="col-10 offset-1">
+  <br />
+  <br />
+  <h1 class="text-center" id='about_header'>About Chess Space</h1>
+  <br />
+  <p class="text-center">
+    Chess Space is a fully functional chess application created by Team Awesome! for <a target="_blank" href="http://www.thefirehoseproject.com/">The Firehose Project's</a> full-stack development curriculum by these Awesome! developers: 
+  </p>
+  <br />
+
+  <div class="class="col-10 col-sm">
+  <tr>
+    <td><%= image_tag 'male.jpg', class: 'img-fluid' %></td> 
+    <td><%= image_tag 'denise.jpg', class: 'img-fluid' %></td>
+    <td><%= image_tag 'female.png', class: 'img-fluid' %></td>
+    <td><%= image_tag 'female.png', class: 'img-fluid' %></td>
+  </tr>
+  <tr class="text-center about_names">
+    <td>Mike Dunnett-Stone</td> 
+    <td>Denise Kelsey</td> 
+    <td>Tristen Scheitle</td> 
+    <td>Monica Sira</td>
+  </tr>
+  <tr>
+    <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ac nunc odio. Interdum et malesuada fames ac ante ipsum primis in faucibus. Fusce dapibus ornare nibh nec congue. Sed facilisis viverra ipsum. Morbi sodales venenatis ultricies. Pellentesque maximus tincidunt vestibulum. Sed posuere dictum quam, eget ornare urna fringilla id.  </td>
+    <td>Denise is an aspiring web developer with an emphasis on Ruby on Rails. With a Bachelor of Arts degree in Business Administration, most of her career has focused on accounting and financial anaylsis. Denise describes herself as an itinerant adventurer, world traveler, tree hugger and all around superb human being.  </td>
+    <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ac nunc odio. Interdum et malesuada fames ac ante ipsum primis in faucibus. Fusce dapibus ornare nibh nec congue. Sed facilisis viverra ipsum. Morbi sodales venenatis ultricies. Pellentesque maximus tincidunt vestibulum. Sed posuere dictum quam, eget ornare urna fringilla id.  </td>  
+    <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ac nunc odio. Interdum et malesuada fames ac ante ipsum primis in faucibus. Fusce dapibus ornare nibh nec congue. Sed facilisis viverra ipsum. Morbi sodales venenatis ultricies. Pellentesque maximus tincidunt vestibulum. Sed posuere dictum quam, eget ornare urna fringilla id.  </td>
+  </tr>
+  <tr>
+    <td>
+      <%= link_to 'http://github.com/denisekelsey' do %>
+        <span class="fa fa-github-square fa-2x social-button"></span>
+      <% end %> 
+      <%= link_to 'https://www.facebook.com/denise.kelsey' do %>
+        <span class="fa fa-facebook-square fa-2x social-button"></span>
+      <% end %>
+      <%= link_to 'https://www.linkedin.com/in/denise-kelsey-91288354/' do %>
+        <span class="fa fa-linkedin-square fa-2x social-button"></span>
+      <% end %>
+    </td>
+    <td>
+      <%= link_to 'http://github.com/denisekelsey' do %>
+        <span class="fa fa-github-square fa-2x social-button"></span>
+      <% end %> 
+      <%= link_to 'https://www.facebook.com/denise.kelsey' do %>
+        <span class="fa fa-facebook-square fa-2x social-button"></span>
+      <% end %>
+      <%= link_to 'https://www.linkedin.com/in/denise-kelsey-91288354/' do %>
+        <span class="fa fa-linkedin-square fa-2x social-button"></span>
+      <% end %>
+    </td>
+    <td>
+      <%= link_to 'http://github.com/denisekelsey' do %>
+        <span class="fa fa-github-square fa-2x social-button"></span>
+      <% end %> 
+      <%= link_to 'https://www.facebook.com/denise.kelsey' do %>
+        <span class="fa fa-facebook-square fa-2x social-button"></span>
+      <% end %>
+      <%= link_to 'https://www.linkedin.com/in/denise-kelsey-91288354/' do %>
+        <span class="fa fa-linkedin-square fa-2x social-button"></span>
+      <% end %>
+    </td>
+    <td>
+      <%= link_to 'http://github.com/denisekelsey' do %>
+        <span class="fa fa-github-square fa-2x social-button"></span>
+      <% end %> 
+      <%= link_to 'https://www.facebook.com/denise.kelsey' do %>
+        <span class="fa fa-facebook-square fa-2x social-button"></span>
+      <% end %>
+      <%= link_to 'https://www.linkedin.com/in/denise-kelsey-91288354/' do %>
+        <span class="fa fa-linkedin-square fa-2x social-button"></span>
+      <% end %>
+    </td>
+  </tr>
+</table>
+
+  
