--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -1,8 +1,22 @@
 @import "bootstrap";
 @import "font-awesome";
 
-.about_names {
+
+.about-links {
+  display: block;
+  margin-left: auto;
+  margin-right: auto
+}
+
+.about-names {
   font-weight: 600;
+  font-size: 20px;
+  padding-top: 20px;
+  text-align: center;
+}
+
+.about-tools {
+  padding-top: 50px;
 }
 
 .booyah-box {
@@ -18,30 +32,31 @@
   padding: 20px 30px;
 }
 
-.flex-container {
-  -webkit-flex-direction: column; /* Safari */
-  flex-direction:         column;
+.clr {
+  clear: both;
 }
 
 .help-block {
-    color: #ff3333;
-    background-color: #FFEEEE;
-    border-radius: 3px;
-    padding: 2px 8px 2px 8px;
+  color: #ff3333;
+  background-color: #FFEEEE;
+  border-radius: 3px;
+  padding: 2px 8px 2px 8px;
 }
 
-td {
-  padding: 10px 30px;
+.icons {
+  text-align: center;
+  padding-bottom: 0px;
 }
 
+.icon {
+  margin: 10px 0;
+}
 
-
-#user-font{
-  font-weight: 600;
-  border-bottom: 3px solid black; 
-  margin-left: 30%;
-  margin-right: 30%;
-  padding-top: 20px;
+img.about-image {
+  max-height: 260px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto
 }
 
 #user_remember_me.boolean.optional {
