--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,1 +1,11 @@
-<h1>A super-pretty homepage for our app</h1>
+<div class="hero">
+  <br />
+  <br />
+  <br />
+<div class="frosty col-10 offset-1 text-center">
+    
+    <br />
+      
+    <br /><br />
+  </div>
+</div>
