--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,25 +14,20 @@
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand" href="#">Chess Space</a>
+        <%= link_to 'Chess Space', root_path, class: 'navbar-brand' %> 
 
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-          <ul class="navbar-nav mr-auto mt-2 mt-md-0">
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-          </ul>
           <ul class="navbar-nav">
             <% if user_signed_in? %>
               <li class="nav-item">
-                <%= link_to 'Sign out', destroy_user_session_path, method: :delete, class: 'nav-link' %>
+                <%= link_to 'Sign Out', destroy_user_session_path, method: :delete, class: 'nav-link' %>
               </li>
             <% else %>
               <li class="nav-item">
-                <%= link_to 'Sign in', new_user_session_path, class: 'nav-link' %>
+                <%= link_to 'Sign In', new_user_session_path, class: 'nav-link' %>
               </li>
               <li class="nav-item">
-                <%= link_to 'Sign up', new_user_registration_path, class: 'nav-link' %>
+                <%= link_to 'Sign Up', new_user_registration_path, class: 'nav-link' %>
               </li>
             <% end %>
           </ul>
