--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -16,7 +16,7 @@ body {
   position: relative;
   width: 100%;
   min-height: 100px;
-  background: image_url('browncheck.jpg');
+  background: image_url('gun_metal.png');
   color: #fff7e6;
   font-family: "Helvetica Neue", Helvetica;
   padding: 20px 0px;
