--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -1,10 +1,5 @@
 @import "bootstrap";
 
-:hover {
-  text-decoration: none;
-  color: #00ccff;
-}
-
 .booyah-box {
   -moz-box-shadow: 1px 1px 2px 0 #d0d0d0;
   -webkit-box-shadow: 1px 1px 2px 0 #d0d0d0;
@@ -18,6 +13,61 @@
   padding: 20px 30px;
 }
 
+.btn-warning {
+  color: white;
+  background-color: #fff7e6;
+  border-color: #663300;
+  border-radius: 0.1rem;
+  text-shadow: rgba(0, 0, 0, 0.10) 1px 1px;
+  margin: 30px;
+  font-size: 20px;
+  font-weight: 600;
+  box-shadow: 0px 1px 3px #2a2a2a;
+}
+
+/* .btn-warning.raised {
+  box-shadow: 0 3px 0 0 #fff7e6;
+}
+
+
+.btn-warning.raised:active, .btn-warning.raised.active {
+  background: #33a6cc;
+  box-shadow: none;
+  margin-bottom: -3px;
+  margin-top: 3px;
+} */
+
+/*Rotate div 
+    -ms-transform: rotate(-22deg);  IE 9 
+    -webkit-transform: rotate(-22deg);  Chrome, Safari, Opera 
+    transform: rotate(-22deg); 
+  } */
+  
+
+.frosty {
+  background: rgba(0, 0, 0, 0.4);
+  color: white;
+  border-radius: 0.1rem;
+  box-shadow: 0px 1px 3px #2a2a2a;
+  margin-top: 70px;
+  padding: 30px;
+}
+
+/* .frosty h1 {
+  font-family: 'orbitronlight';
+  text-shadow: rgba(0, 0, 0, 0.95) 1px 1px;
+  color: #00ccff;
+  padding: 10px;
+}
+
+.frosty h2 {
+  font-family: 'open_sanslight_italic';
+  text-shadow: rgba(0, 0, 0, 0.95) 1px 1px;
+  font-size: 35px;
+  color: #e6e6e6;
+  padding-bottom: 10px;
+} */
+
 .help-block {
     color: #ff3333;
     background-color: #FFEEEE;
@@ -26,7 +76,7 @@
 }
 
 .hero {
-  background: image_url('chess1.jpg') no-repeat center center fixed;
+  background: image_url('chesssolar.jpg') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -34,11 +84,15 @@
   height: 600px;
 }
 
+.landing-buttons {
+  margin: auto;
+}
+
 .navbar {
   font-family: 'open_sanslight';
   font-size: 20px;
   box-shadow: 0px 1px 3px #2a2a2a;
-  background: image_url('browncheck.jpg');
+  background: image_url('gun_metal.png');
 }
 
 .navbar-light .navbar-nav .nav-link {
