--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,10 +2,16 @@
   <br />
   <br />
   <br />
-<div class="frosty col-10 offset-1 text-center">
-    
-    <br />
-      
-    <br /><br />
+  <div class="frosty col-8 offset-2 text-center">
+     <div class="row landing-buttons">
+        <%= link_to 'QuickJoin','#' , class: 'btn btn-warning' %>
+        <br />
+        <%= link_to 'Create A New Game', new_game_path, class: 'btn btn-warning' %>
+        <br />
+        <%= link_to 'Join A Game', '#', class: 'btn btn-warning' %>
+        <br />
+    </div>
   </div>
 </div>
+
+<!-- join_game_path(@game[:id]) for when we have games to link to -->
