prelim landing page

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -29,7 +29,11 @@
   background-color: #595959;
   color: white;
   border-color: white;
-}  
+} 
+
+.clr {
+  clear: both;
+} 
 
 
 /* .btn-warning.raised {
