--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <%= link_to 'Chess Space', root_path, class: 'navbar-brand' %> 
-
+          <br class="clr" />
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
           <ul class="navbar-nav mr-auto mt-2 mt-md-0">
             <ul class="navbar-nav float-right">
