--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -1,4 +1,23 @@
 @import "bootstrap";
+@import "font-awesome";
+
+
+.about-links {
+  display: block;
+  margin-left: auto;
+  margin-right: auto
+}
+
+.about-names {
+  font-weight: 600;
+  font-size: 20px;
+  padding-top: 20px;
+  text-align: center;
+}
+
+.about-tools {
+  padding-top: 50px;
+}
 
 .booyah-box {
   -moz-box-shadow: 1px 1px 2px 0 #d0d0d0;
@@ -63,6 +82,22 @@
   height: 600px;
 }
 
+.icons {
+  text-align: center;
+  padding-bottom: 0px;
+}
+
+.icon {
+  margin: 10px 0;
+}
+
+img.about-image {
+  max-height: 260px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto
+}
+
 .landing-buttons {
   margin: auto;
 }
@@ -72,6 +107,15 @@
   font-size: 20px;
   box-shadow: 0px 1px 3px #2a2a2a;
   background: image_url('gun_metal.png');
+}
+
+.navbar-brand {
+  font-size: 25px;
+  font-weight: 700;
+}
+
+.navbar-light .navbar-brand:hover {
+  color: lightgray;
 }
 
 .navbar-light .navbar-nav .nav-link {
@@ -90,25 +134,10 @@
   padding: 10px 20px;
 }
 
-.navbar-light .navbar-brand:hover {
-  color: lightgray;
-}
-
 ul {
   list-style-type: none;
-}
-
-
-
-#user-font{
-  font-weight: 600;
-  border-bottom: 3px solid black; 
-  margin-left: 30%;
-  margin-right: 30%;
-  padding-top: 20px;
-}
+}  
 
 #user_remember_me.boolean.optional {
   margin-right: 10px;
 }
- 
