--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,12 +10,12 @@
 
   <body>
     <div id="flex-content-container">
-      <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+      <nav class="navbar navbar-toggleable-md navbar-inverse bg-faded">
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        
-        <%= link_to 'Chess Space', root_path, class: 'navbar-brand' %> 
+
+        <%= link_to 'Chess Space', root_path, class: 'navbar-brand' %>
           <br class="clr" />
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
           <ul class="navbar-nav mr-auto mt-2 mt-md-0">
@@ -33,7 +33,7 @@
                 </li>
               <% end %>
             </ul>
-           </ul> 
+           </ul>
         </div>
       </nav>
 
