--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -19,17 +19,8 @@
   padding-top: 50px;
 }
 
-.background1 {
-  background: image_url('gray1.jpg') no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  height: 600px;
-}
-
-.background2 {
-  background: image_url('gray3.jpg') no-repeat center center fixed;
+.background {
+  background: image_url('chesssolar-opaque1.jpg') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
