--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,18 +17,18 @@
 
         <%= link_to 'Chess Space', root_path, class: 'navbar-brand' %>
           <br class="clr" />
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-          <ul class="navbar-nav mr-auto mt-2 mt-md-0">
-            <ul class="navbar-nav float-right">
+        <div class="collapse navbar-collapse justify-content-end" id="navbarTogglerDemo02">
+          <ul class="navbar-nav mt-2 mt-md-0">
+            <ul class="navbar-nav">
               <% if user_signed_in? %>
-                <li class="nav-item">
+                <li class="nav-item" id="lastlink">
                   <%= link_to 'Sign Out', destroy_user_session_path, method: :delete, class: 'nav-link' %>
                 </li>
               <% else %>
                 <li class="nav-item">
                   <%= link_to 'Sign In', new_user_session_path, class: 'nav-link' %>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item" id="lastlink">
                   <%= link_to 'Sign Up', new_user_registration_path, class: 'nav-link' %>
                 </li>
               <% end %>
@@ -49,9 +49,7 @@
 
     <div id="footer">
       <div class="container">
-        <b>Footer Here</b>
-        <br />
-        <ul>
+        <ul class="float-right">
           <li class="nav-item">
             <%= link_to 'About', about_path, class: 'nav-link' %>
           </li>
