user dashboard page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,9 @@
           <ul class="navbar-nav mt-2 mt-md-0">
             <ul class="navbar-nav">
               <% if user_signed_in? %>
+                <li class="nav-item">
+                  <%= link_to 'My Profile', user_path(current_user), class: 'nav-link' %>
+                </li>
                 <li class="nav-item" id="lastlink">
                   <%= link_to 'Sign Out', destroy_user_session_path, method: :delete, class: 'nav-link' %>
                 </li>
