Added chessboard with circles as pieces

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -27,3 +27,53 @@
     <% end %>
   </tbody>
 </table>
+
+
+
+<%##Below is chessboard display. Refer to test_board.js in javascript folder. %>
+<%# and refer to style.scss %>
+<div id="game">
+    <div id="board">
+    </div>
+
+    <div id="pieces">
+    </div>
+</div>
+
+
+<%# Below is full code from Codecademy in case we want to use it later:
+  <html>
+
+  <head>
+
+  <title>Checkers</title>
+
+  <link rel="stylesheet" href="style.scss"/>
+
+  <script src='test_board.js'></script>
+
+  <!--<script src='provided.js'></script>-->
+
+
+  </head>
+
+  <body>
+
+  <div id="game">
+      <div id="board">
+      </div>
+
+      <div id="pieces">
+      </div>
+
+  </div>
+
+  <div id="meta">
+  <h1>Checkers</h1>
+  <h4>Moves: <span id="moveCount">0</span></h4>
+  </div>
+
+  </body>
+
+  </html>
+%>
